# industry-chain-mcp-server

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  start_mcp_server.sh
.github/workflows/: ci.yml
server/: __init__.py  high_screen.py  mcp_server.py
server/config/: __init__.py  high_screen_fields.json  high_screen_options.json
tests/: test_condition.py
