[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "handaas-industry-chain-mcp-server"
version = "0.1.0"
description = "MCP wrappers for HandaaS enterprise, supply-chain, patent, bidding, and policy data interfaces."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "HandaaS" }]
keywords = ["mcp", "handaas", "industry-chain", "enterprise-data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.12.0",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["build>=1.2.0"]

[project.urls]
Homepage = "https://github.com/handaas/industry-chain-mcp-server"
Repository = "https://github.com/handaas/industry-chain-mcp-server"
Issues = "https://github.com/handaas/industry-chain-mcp-server/issues"

[project.scripts]
handaas-industry-chain-mcp = "server.mcp_server:main"

[tool.setuptools.packages.find]
include = ["server*"]
